# arbitrator

./: .aiexclude  .claudeignore  .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  CUsersdev_home.claudeprojectsc--shere-folder-arbitratormemoryMEMORY.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  index.html  main.py  old_table.py  patch_autotrader.py  patch_chart.py  patch_handler.py  patch_html.py  patch_monitors.py  patch_monitors2.py  pyproject.toml  strategies-mechanics.en.md  strategies-mechanics.uk.md  ufoz-tools-0.3.0.tgz
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  log-analyzer.md  researcher.md
.claude/commands/: ship.md
.claude/hooks/: post-tool-use.ps1
.cursor/: environment.json  hooks.json  mcp.json  settings.json
.cursor/agents/: code-reviewer.md  log-analyzer.md  researcher.md
.cursor/commands/: ship.md
.cursor/hooks/: before-submit.ps1  before-submit.sh  post-tool-use.ps1  post-tool-use.sh  session-start.ps1  session-start.sh
.cursor/modes/: terse.md
.specify/: feature.json  init-options.json
aws-credits-lab/: .env.example  .gitignore  .terraform.lock.hcl  README.md  bedrock.tf  budget.tf  env.tf  lambda.tf  locals.tf  network.tf  outputs.tf  rds.tf  terraform.tfvars.example  variables.tf  versions.tf
maket/: index.html
package/: README.md  index.js  package.json
scripts/: audit_paper_orders.py  backtest_ff.py  build_ui.py  check_token_identity.py  demo_paper_orders.py  get_telegram_chat_id.py  inspect_exchanges.py  run_app.py  test_telegram.py  trade_report.py
specs/: 004-maker-taker-execution.md
tests/: conftest.py  helpers.py
(+434 files in other folders)
