[project]
name = "arbitrator"
version = "0.1.0"
description = "Arbitrator project"
authors = [
    {name = "dev_home",email = "dev@example.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "ccxt (>=4.5.56,<5.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "arbitrator", from = "src"}]

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.14,<0.16.0)",
    "black (>=26.5.1,<27.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "N", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/arbitrator/presentation/**" = ["RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
mypy_path = "src"
exclude = ["\\.venv", "build", "dist"]

[[tool.mypy.overrides]]
module = ["ccxt", "ccxt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
python_files = ["test_*.py"]
